--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <input type="text" placeholder="h" class="input input-bordered input-xs w-[30%] max-w-xs" />cm
                      </div>
                       <div class="card-actions mt-6">
-                        <button class="btn btn-primary">Calculate</button>
+                        <button id="first-card" class="btn btn-primary">Calculate</button>
                       </div>
                     </div>
                 </div>
@@ -78,6 +78,23 @@
                       </div>
                     </div>
                 </div>
+                <!-- card-4 -->
+                <div class="card w-full bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/rhombus.png" alt="Rhombus" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Rhombus</h2>
+                      <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i> d1 <i class="fa-solid fa-xmark"></i> d2 </p>
+                      <div>
+                        <input type="text" placeholder="d1" class="input input-bordered input-xs w-[30%] max-w-xs" /> cm
+                        <input type="text" placeholder="d2" class="input input-bordered input-xs w-[30%] max-w-xs" />cm
+                     </div>
+                      <div class="card-actions mt-6">
+                        <button class="btn btn-primary">Calculate</button>
+                      </div>
+                    </div>
+                </div>
                
             </div>
 
@@ -88,6 +105,7 @@
         </section>
     </main>
     <script src="js/next.js"></script>
+    <script src="js/calculation.js"></script>
 
 </body>
 </html>
