--- a/index.html
+++ b/index.html
@@ -95,7 +95,41 @@
                       </div>
                     </div>
                 </div>
-               
+                <!-- card-5 -->
+                <div class="card w-full bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/pentagon.png" alt="Pentagon" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Pentagon</h2>
+                      <p>Area (A) =
+                        0.5 <i class="fa-solid fa-xmark"></i> p <i class="fa-solid fa-xmark"></i> b</p>
+                        <div>
+                            <input type="text" placeholder="p" class="input input-bordered input-xs w-[30%] max-w-xs" /> cm
+                            <input type="text" placeholder="b" class="input input-bordered input-xs w-[30%] max-w-xs" />cm
+                         </div>
+                      <div class="card-actions mt-6">
+                        <button class="btn btn-primary">Calculate</button>
+                      </div>
+                    </div>
+                </div>
+                <!-- card-6 -->
+                <div class="card w-full bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                      <img src="images/ellipse.png" alt="Ellipse" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <h2 class="card-title">Ellipse</h2>
+                      <p class="flex">Area (A) = <img class="w-3 mr-1" src="images/pi-symbol-icon.svg" alt=""> a b</p>
+                      <div>
+                        <input type="text" placeholder="a" class="input input-bordered input-xs w-[30%] max-w-xs" /> cm
+                        <input type="text" placeholder="b" class="input input-bordered input-xs w-[30%] max-w-xs mt-10 mb-2" />cm
+                     </div>
+                      <div class="card-actions mt-6">
+                        <button class="btn btn-primary">Calculate</button>
+                      </div>
+                    </div>
+                </div>
             </div>
 
 <!-- calculation part -->
