--- a/next.html
+++ b/next.html
@@ -9,6 +9,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1 class="text-4xl font-bold">This is next page</h1>
+   <header>
+    <h1 class="text-4xl text-center mt-5 mb-12 font-bold">This is next page</h1>
+   </header>
+  
+    
 </body>
 </html>
