nextPage-ques & ans

--- a/next.html
+++ b/next.html
@@ -12,7 +12,37 @@
    <header>
     <h1 class="text-4xl text-center mt-5 mb-12 font-bold">This is next page</h1>
    </header>
-  
+   <main>
+    <section class="ml-20 w-[70%] ">
+        <!-- 1st ques -->
+        <div class="mb-8">
+            <p class="text-2xl">1. What is DOM? what is the purpose of DOM?</p>
+            <p>Ans: In javascript it is an interface that we can manipulate the content of a website. When we use DOM the browser create a representation of website document.Using DOM we can change the style,structure also can create elements and attributes. </p>
+        </div>
+        <!-- 2nd ques -->
+        <div class="mb-8">
+            <p class="text-2xl">2.How to select element from DOM?</p>
+            <p>Ans: There is a several way to select element from DOM. Which are;
+                <p>1.getElementsByClassName()</p>
+                <p>2.getElementById()</p>
+                <p>3.getElementsByTagName()</p>
+                <p>4.querySelector()</p>
+                <p>5.querySelectorAll()</p>
+            </p>
+        </div>
+        <!-- 3rd ques -->
+        <div class="mb-8">
+            <p class="text-2xl">3.What is event bubble?</p>
+            <p>Ans: Event is in javascript is a change in the state of an object.Event bubbling happens when an element receives an event ,that event bubbles up to its parent(it can be transmitted or propagated).</p>
+        </div>
+        <!-- 4th ques -->
+        <div>
+            <p class="text-2xl">4. What is callback function? What does it do?</p>
+            <p>Ans: Callback function is a way that you pass into another function as an argument for executing later.It think of parameters as variables that are used to hold values in a function.</p>
+        </div>
+
+    </section>
+   </main>
     
 </body>
 </html>
