--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <!-- navbar -->
         <div class="navbar bg-base-100 lg:px-12">
             <div class="navbar-start">
               <div class="dropdown">
@@ -25,6 +26,7 @@
           </div>
     </header>
     <main>
+        <!-- cards and calculation section -->
         <section class="lg:px-12 flex flex-col md:flex-row lg:flex-row">
             <div class="products-details w-[65%] mt-12 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- card-1 -->
@@ -33,11 +35,11 @@
                       <img src="images/triangle.png" alt="Triangle" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                      <h2 class="card-title">Triangle</h2>
+                      <h2 id="first-name" class="card-title">Triangle</h2>
                       <p>Area (A) = 0.5 <i class="fa-solid fa-xmark"></i>b <i class="fa-solid fa-xmark"></i> h</p>
                      <div>
-                        <input type="text" placeholder="b" class="input input-bordered input-xs w-[30%] max-w-xs" /> cm
-                        <input type="text" placeholder="h" class="input input-bordered input-xs w-[30%] max-w-xs" />cm
+                        <input id="triFirst-input" type="text" placeholder="b" class="input input-bordered input-xs w-[30%] max-w-xs" /> cm
+                        <input id="triSecond-input" type="text" placeholder="h" class="input input-bordered input-xs w-[30%] max-w-xs" />cm
                      </div>
                       <div class="card-actions mt-6">
                         <button id="first-card" class="btn btn-primary">Calculate</button>
