--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header>
+    <header class="w-[90%]">
         <!-- navbar -->
-        <div class="navbar bg-base-100 lg:px-12">
+        <div class="navbar bg-base-100 lg:w-full lg:px-12">
             <div class="navbar-start">
               <div class="dropdown">
                
@@ -30,7 +30,7 @@
         <section class="lg:px-12 flex flex-col md:flex-row lg:flex-row">
             <div class="products-details w-[65%] mt-12 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- card-1 -->
-                <div class="card w-full bg-base-100 shadow-xl">
+                <div id="card-1" class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                       <img src="images/triangle.png" alt="Triangle" class="rounded-xl" />
                     </figure>
@@ -135,9 +135,9 @@
             </div>
 
 <!-- calculation part -->
-            <div class="cart-details ml-4 w-full md:w-[35%] lg:w-[35%] mx-auto">
+            <div class="cart-details ml-0 lg:ml-4 sm:w-full md:w-[35%] lg:w-[35%] mx-auto">
                 <h1 class="text-4xl text-center font-semibold underline mt-12">Area Calculation</h1>
-                <table class="table w-full">
+                <table class="table w-[95%]">
                     <thead>
         
                     </thead>
