--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="lg:px-12 flex flex-col md:flex-row lg:flex-row">
             <div class="products-details w-[65%] mt-12 grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- card-1 -->
-                <div id="card-1" class="card w-full bg-base-100 shadow-xl">
+                <div id="first" class="card w-full bg-base-100 shadow-xl">
                     <figure class="px-10 pt-10">
                       <img src="images/triangle.png" alt="Triangle" class="rounded-xl" />
                     </figure>
